--- a/Valentin/style.css
+++ b/Valentin/style.css
@@ -6,6 +6,9 @@
 
 body {
     background-image: url("./assets/bg.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
     color: white;
 }
 
@@ -31,6 +34,42 @@ h1 {
     margin: 0 auto;
 }
 
+.parent-div-v {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.star-v {
+    display: inline-block;
 
+}
 
+.star-v path {
+    fill: #0B113B;
+    transition: fill 0.2s ease
+}
+
+.star-v.hovered-v path {
+    fill: #00FFFF;
+}
+
+.star-v:hover svg{
+    height: 3.5rem;
+    width: 3.5rem;
+    filter: drop-shadow(0 0 25px #0ff);
+    transition: 0.2s ease;
+}
+
+.star-v.hovered-v path {
+    fill: #00FFFF;
+}
+
+.star-v:hover {
+    height: 3.5rem;
+    width: 3.5rem;
+}
+
+.clicked-v path{
+    fill: #00FFFF;
+}
