--- a/Melanie/assets/styleM.css
+++ b/Melanie/assets/styleM.css
@@ -19,14 +19,20 @@ body {
 }
 
 #countdown {
+  text-align: center;
   position: absolute;
   top: 80px;
-  right: 150px;
+  right: 180px;
   z-index: 10;
   font-family: "Outfit", sans-serif;
   background-color: transparent;
   color: white;
-  font-size: 44px;
+  font-size: 14px;
+}
+
+p #seconds {
+  font-size: 48px;
+  color: white;
 }
 
 h1 {
