--- a/Melanie/assets/styleM.css
+++ b/Melanie/assets/styleM.css
@@ -13,26 +13,70 @@ body {
 }
 #logo {
   position: absolute;
-  top: 60px;
+  top: 50px;
   left: 80px;
   z-index: 10;
+}
+
+#countdown p {
+  margin: 0;
+  font-size: 14px;
 }
 
 #countdown {
   text-align: center;
   position: absolute;
-  top: 80px;
+  top: 40px;
   right: 180px;
   z-index: 10;
   font-family: "Outfit", sans-serif;
-  background-color: transparent;
   color: white;
   font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-p #seconds {
+#countdown svg {
+  filter: drop-shadow(5px 1px 2px rgb(0 0 0 / 0.1));
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transform: rotate(-90deg);
+  margin-bottom: 10px;
+}
+
+.progress-ring__background {
+  filter: drop-shadow(5px 1px 2px rgb(0 0 0 / 0.4));
+  fill: transparent;
+  stroke: rgba(255, 255, 255, 0.2);
+  stroke-width: 10;
+}
+
+.progress-ring__circle {
+  fill: transparent;
+  stroke: #00ffff;
+  stroke-width: 10;
+  transition: stroke-dashoffset 1s linear;
+  transform: rotate(0deg);
+  transform-origin: 50% 50%;
+}
+
+#seconds {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
   font-size: 48px;
   color: white;
+  margin: 0;
+}
+
+p {
+  position: absolute;
+  top: 17%;
+  left: 25%;
 }
 
 h1 {
@@ -64,7 +108,7 @@ button:hover {
 }
 
 #questionsContainer {
-  display: table-cell;
+  margin-top: 300px;
   vertical-align: middle;
   text-align: center;
 }
@@ -79,4 +123,14 @@ h2 {
 
 span {
   color: #d20094;
+}
+
+.verde {
+  background-color: green;
+  color: white;
+}
+
+.rosso {
+  background-color: red;
+  color: white;
 }
