--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -30,15 +30,17 @@ body {
   font-size: 60px;
   font-weight: bold;
   position: relative;
-  bottom:17vh;
+  bottom: 23vh;
+  left:6%;
  
 }
 
 .pHeroC {
   font-family: "Inter";
   font-size: 16px;
-  position: relative;
-  bottom: 22vh;
+  position: absolute;
+  top: 20%;
+  right: 24%
 
 }
 
@@ -53,8 +55,8 @@ body {
   color: white;
   vertical-align: top;
   position:relative;
-  right: 25%;
-  bottom: 7vh;
+  right: 12%;
+  bottom: 20vh;
 
 }
 .resultLeftC h2{
@@ -69,20 +71,24 @@ body {
   color: white;
   text-align:center;
   font-weight: bold;
+  position: absolute;
+  top: 41%;
 }
 #pQuestionsCorrectC{
   font-family: "Outfit";
   font-size: 1.2rem;
   color: white;
   text-align:center;
-  padding-top: 1%;
+  position: absolute;
+  top: 95%;
+  left: 5%;
 
 }
 .wrapperC{
   position: absolute;
   display: inline-block;
   right: 38%;
-  top: 39%;
+  top: 30%;
 }
 .grapichC{
   width: 320px;
@@ -96,17 +102,17 @@ body {
 }
 .contentGrapichC{
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 56%;
+  left: 42%;
   transform: translate(-50%, -50%);
-  width: 280px; /* Adjusted to fit within the circle */
-  height: 280px; /* Adjusted to fit within the circle */
+  width: 280px; /*heigth e width date per "entrare" nel cerchio*/
+  height: 280px; 
   text-align: center; 
   background-color:transparent; 
-  border-radius: 50%; /* Arrotonda per adattarsi al cerchio */
+  border-radius: 50%; /* Arrotondata per adattarsi al cerchio */
  padding-top: 25%; 
  padding-inline:15%; /* 40px 20px; */
-  box-sizing: border-box; /* Include il padding nelle dimensioni totali */
+  box-sizing: border-box; 
   z-index: 2;
 
 
@@ -117,9 +123,9 @@ body {
   margin-top:25%;
   font-weight:bold;
   font-family: "Inter";
-  margin:2% 0;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Aggiungi un'ombra al testo per migliorarne la leggibilità */
-
+  margin: 2% 0%; 
+  padding-left: 13%;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
 }
 #pSubtitleC{
 color: #00FFFF;
@@ -127,40 +133,49 @@ font-size: 16px;
 margin-top:1%;
 font-weight:bold;
 font-family: "Inter";
-margin:2% 0;
+margin: 12% 0;    
+padding-left:7%;
 text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 #certificateC{
   font-size: 13px;
-  margin-top:9%;  
+  margin-top: 25%;  
   font-family: "Inter";
   color:rgb(224, 224, 224);
-  text-align:center;
-
+  text-align:center;  
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  padding-right: 5%;
 }
-#emailCertificateC{
+/* #emailCertificateC{
   font-size: 13px;
   padding-top:2%;  
   font-family: "Inter";
   color:rgb(224, 224, 224);
   text-align:center;
+  margin-top: 35%;
+  padding-left: 4%;
+  padding-right: 13%;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
+}*/
 
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
 #percWrongC{
   font-family: "Outfit";
   font-size: 60px;
   color: white;
   text-align:center;
   font-weight: bold;
+  position: absolute;
+  top: 41%;
+  left: 8%;
 }
 #pQuestionsWrongC{
   font-family: "Outfit";
   font-size: 1.2rem;
   color: white;
-  text-align:center;
-  padding-top: 1%;
+  text-align:center; 
+  position: absolute;
+  top: 95%;
+  left: 20%;
 
 }
 
@@ -170,7 +185,7 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   vertical-align: top;
   position: relative;
   left: 22%;
-  bottom:7vh;
+  bottom: 20vh;
  }
 .resultRightC h2{
   font-family: "Outfit";
@@ -182,9 +197,8 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   text-align: center;
   margin-block: 2.5rem;
   position: relative;
-  top: 10vh;
-  margin-right:1.5rem;
- 
+  top: 4vh;
+  margin-left:12%; 
 }
 
 
@@ -198,6 +212,7 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   padding-block: 1%;
   width: 150px;
   border-radius: 0;  
+  box-shadow: none;
 }
 #buttonC:hover{
   transform: scale(1.05);
