--- a/css/feedback-style.css
+++ b/css/feedback-style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("./assets/bg.jpg");
+    background-image: url("../asset/bg.jpg");
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
