--- a/css/welcome-page.css
+++ b/css/welcome-page.css
@@ -135,4 +135,6 @@ button {
     cursor: pointer;
     border-radius: 0; 
     transition: background-color 0.3s ease;
+    filter: drop-shadow(0 0 12px #00FFFF);
+
 }
