--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -12,7 +12,6 @@ body {
   height: 100vh; */
   width: 90%;
   height: 90%;
-  
 }
 #logo {
   position: absolute;
@@ -110,12 +109,15 @@ button:hover {
   background: #d20094;
   background: linear-gradient(0deg, #900080, #d20094);
 }
+#benchmarkPage {
+  display: table;
+}
 
 #questionsContainer {
   margin-top: 15%;
   vertical-align: middle;
   text-align: center;
-  margin-left:10%;
+  margin-left: 10%;
 }
 
 h2 {
