--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -7,11 +7,9 @@ body {
   background-position: center left;
   background-attachment: fixed;
   margin: 0;
-  display: table;
+  /* display: table; */
   /* width: 100vw;
   height: 100vh; */
-  width: 90%;
-  height: 90%;
 }
 #logo {
   position: absolute;
