--- a/css/feedback-style.css
+++ b/css/feedback-style.css
@@ -134,6 +134,19 @@ h1 {
     animation: scale-up-form 0.2s ease forwards;
 }
 
+.p2-v{
+    display: inline-block;
+    margin: 0 auto 3.5rem;    
+    background-color: rgba(255, 255, 255, 0.262);
+    padding: 0.3rem 0.4rem;
+    border-radius: 2px;
+    font-size: medium;
+}
+
+.hidden {
+    display: none;
+}
+
 .button-form {
     display: block;
     margin: 0 auto;
