--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -5,7 +5,7 @@
 * {
   box-sizing: border-box;
 }
-/* 
+
 body {
   background-image: url(../Melanie/assets/bg.jpg);
   background-size: cover;
@@ -16,7 +16,7 @@ body {
   width: 10%;
   margin-left: 5%;
   margin-top: 3%;
-} */
+}
  .hidden{
   display: none;
  }
