--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -17,9 +17,7 @@ body {
   margin-left: 5%;
   margin-top: 3%;
 }
- .hidden{
-  display: none;
- }
+ 
 .heroC {
   text-align: center;
   color: white;
@@ -28,20 +26,14 @@ body {
 .h1HeroC {
   font-family: "Outfit";
   font-size: 60px;
-  font-weight: bold;
-  position: relative;
-  bottom: 23vh;
-  left:6%;
+  font-weight: bold;  
+  
  
 }
 
 .pHeroC {
   font-family: "Inter";
   font-size: 16px;
-  position: absolute;
-  top: 20%;
-  right: 24%
-
 }
 
 .grapichresults{
@@ -71,17 +63,12 @@ body {
   color: white;
   text-align:center;
   font-weight: bold;
-  position: absolute;
-  top: 41%;
 }
 #pQuestionsCorrectC{
   font-family: "Outfit";
   font-size: 1.2rem;
   color: white;
-  text-align:center;
-  position: absolute;
-  top: 95%;
-  left: 5%;
+  text-align:center
 
 }
 .wrapperC{
