--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -21,7 +21,8 @@ body {
 .heroC {
   text-align: center;
   color: white;
-  margin-top: 17%;
+  margin-top: 0;
+  margin-bottom: 2rem;
 }
 .h1HeroC {
   font-family: "Outfit";
@@ -40,29 +41,18 @@ body {
   margin:auto;
   text-align:center;
 }
-.resultLeftC{
+.resultLeftC, .resultRightC{
   display:inline-block;
   font-family: "Outfit";
   font-size: 60px;
   color: white;
   vertical-align: top;
-  position:relative;
-  right: 12%;
-  bottom: 20vh;
+  padding-block: 80px;
+  padding-inline: 40px; 
+}
 
-}
-.resultLeftC h2{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  text-align:center;
-}
-#percCorretteC{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  text-align:center;
-  font-weight: bold;
+ #percCorretteC{
+   font-weight: bold;
 }
 #pQuestionsCorrectC{
   font-family: "Outfit";
@@ -74,42 +64,41 @@ body {
 .wrapperC{
   position: relative;
   display: inline-block;
-  }
+
+}
 .grapichC{
   width: 320px;
   height: 320px;
   border-radius: 50%;
-  position: relative;
-  vertical-align: top;
+   vertical-align: top;
   background-image: conic-gradient(#d20094 0% 34%, #00ffff 0% 66%);
   mask: radial-gradient(farthest-side, transparent 67%, black 67%); /*permette di rendere trasparente il centro del div, cosicché si vede il contenuto*/
   z-index: 1;  
 }
 .contentGrapichC{
   position: absolute;
-  top: 56%;
-  left: 42%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  width: 280px; /*heigth e width date per "entrare" nel cerchio*/
-  height: 280px; 
-  text-align: center; 
-  background-color:transparent; 
-  border-radius: 50%; /* Arrotondata per adattarsi al cerchio */
- padding-top: 25%; 
- padding-inline:15%; /* 40px 20px; */
-  box-sizing: border-box; 
-  z-index: 2;
+  width: 210px;
+  height: 210px;
+  /* text-align: center; */
+  background-color: transparent;
+  border-radius: 50%;
+  padding-top: 20px;
+  padding-inline: 15px;
+  box-sizing: border-box;
+  z-index: 2
 
-
-}
+ }
 #pTitleC{
   color:white;
   font-size: 16px;
   margin-top:25%;
   font-weight:bold;
   font-family: "Inter";
-  margin: 2% 0%; 
-  padding-left: 13%;
+  margin: 7% 0%; 
+  padding-left: 2%;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
 }
 #pSubtitleC{
@@ -123,84 +112,47 @@ padding-left:7%;
 text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 #certificateC{
-  font-size: 13px;
-  margin-top: 25%;  
+  font-size: 13px;    
   font-family: "Inter";
   color:rgb(224, 224, 224);
   text-align:center;  
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  padding-right: 5%;
-}
-/* #emailCertificateC{
-  font-size: 13px;
-  padding-top:2%;  
-  font-family: "Inter";
-  color:rgb(224, 224, 224);
-  text-align:center;
-  margin-top: 35%;
-  padding-left: 4%;
-  padding-right: 13%;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
-}*/
+}
 
 #percWrongC{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  text-align:center;
-  font-weight: bold;
-  position: absolute;
-  top: 41%;
-  left: 8%;
+ font-weight: bold;
+
 }
 #pQuestionsWrongC{
   font-family: "Outfit";
   font-size: 1.2rem;
   color: white;
   text-align:center; 
-  position: absolute;
-  top: 95%;
-  left: 20%;
-
-}
-
-
-.resultRightC{
-  display: inline-block;
-  vertical-align: top;
-  position: relative;
-  left: 22%;
-  bottom: 20vh;
- }
-.resultRightC h2{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
 }
 
 .divButtonC{
   text-align: center;
   margin-block: 2.5rem;
-  position: relative;
-  top: 4vh;
-  margin-left:12%; 
 }
 
 
 #buttonC {
   font-family: "Inter";
   font-size: 16px;
-  background-color: #47196C;
+  background-color: rgba(100, 100, 100, 0.1);
   color: white;
-  border: 1.5px solid white;
+  border: 2px solid white;
   padding-inline: 2.5%;
   padding-block: 1%;
   width: 150px;
   border-radius: 0;  
   box-shadow: none;
+  margin-left: 20px;
+  font-weight: 600;
 }
 #buttonC:hover{
   transform: scale(1.05);
   background-color: #00FFFF;
   box-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.6), 0 0 30px rgba(0, 255, 255, 0.4);
+  color:black;
 }
