--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -23,6 +23,7 @@ body {
   color: white;
   margin-top: 0;
   margin-bottom: 2rem;
+  margin-left:20px;
 }
 .h1HeroC {
   font-family: "Outfit";
@@ -132,7 +133,7 @@ text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 
 .divButtonC{
   text-align: center;
-  margin-block: 2.5rem;
+  margin-top: 3rem;
 }
 
 
