--- a/css/results.css
+++ b/css/results.css
@@ -5,9 +5,9 @@
 * {
   box-sizing: border-box;
 }
-/* 
+
 body {
-  background-image: url(../Melanie/assets/bg.jpg);
+  background-image: url(../asset/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -16,65 +16,52 @@ body {
   width: 10%;
   margin-left: 5%;
   margin-top: 3%;
-} */
- .hidden{
-  display: none;
- }
+}
+ 
 .heroC {
   text-align: center;
   color: white;
-  margin-top: 5%;
- 
+  margin-top: 0;
+  margin-bottom: 2rem;
+  margin-left:20px;
 }
 .h1HeroC {
   font-family: "Outfit";
   font-size: 60px;
-  font-weight: bold;
- 
+  font-weight: bold;  
+  
  
 }
 
-.h6HeroC {
+.pHeroC {
   font-family: "Inter";
   font-size: 16px;
-  margin-top:-35px;
- 
 }
 
 .grapichresults{
   margin:auto;
   text-align:center;
 }
-.resultLeftC{
+.resultLeftC, .resultRightC{
   display:inline-block;
   font-family: "Outfit";
   font-size: 60px;
   color: white;
   vertical-align: top;
- 
-}
-.resultLeftC{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  text-align:center;
-  margin-right:12%;
+  padding-block: 80px;
+  padding-inline: 40px; 
 }
 
-#percCorretteC{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  text-align:center;
-  font-weight: bold;
-  padding-left: 70%;
+ #percCorretteC{
+   font-weight: bold;
 }
 #pQuestionsCorrectC{
   font-family: "Outfit";
   font-size: 1.2rem;
   color: white;
-  text-align:center;
- }
+  text-align:center
+
+}
 .wrapperC{
   position: relative;
   display: inline-block;
@@ -104,16 +91,15 @@ body {
   box-sizing: border-box;
   z-index: 2
 
-
-}
+ }
 #pTitleC{
   color:white;
   font-size: 16px;
   margin-top:25%;
   font-weight:bold;
   font-family: "Inter";
-  margin: 2% 0%; 
-  padding-left: 13%;
+  margin: 7% 0%; 
+  padding-left: 2%;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
 }
 #pSubtitleC{
@@ -127,80 +113,47 @@ padding-left:7%;
 text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 #certificateC{
-  font-size: 13px;
-  margin-top: 25%;  
+  font-size: 13px;    
   font-family: "Inter";
   color:rgb(224, 224, 224);
   text-align:center;  
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  padding-right: 5%;
-}
-/* #emailCertificateC{
-  font-size: 13px;
-  padding-top:2%;  
-  font-family: "Inter";
-  color:rgb(224, 224, 224);
-  text-align:center;
-  margin-top: 35%;
-  padding-left: 4%;
-  padding-right: 13%;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
-}*/
+}
 
 #percWrongC{
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  text-align:center;
-  font-weight: bold;
-  margin-left: -90%;
-  }
+ font-weight: bold;
+
+}
 #pQuestionsWrongC{
   font-family: "Outfit";
   font-size: 1.2rem;
   color: white;
   text-align:center; 
-
- 
-}
-
-
-.resultRightC{
-  display: inline-block;
-  vertical-align: top;
-  }
-.resultRightC {
-  font-family: "Outfit";
-  font-size: 60px;
-  color: white;
-  margin-left: 12%
-}
-.titleWroC{
-padding-left: 15%;
-margin-left: -75%;
 }
 
 .divButtonC{
   text-align: center;
-  /* margin-block: 2.5rem; */
-  margin-left:2%; 
+  margin-top: 3rem;
 }
 
 
 #buttonC {
   font-family: "Inter";
   font-size: 16px;
-  background-color: #47196C;
+  background-color: rgba(100, 100, 100, 0.1);
   color: white;
-  border: 1.5px solid white;
+  border: 2px solid white;
   padding-inline: 2.5%;
   padding-block: 1%;
   width: 150px;
   border-radius: 0;  
   box-shadow: none;
+  margin-left: 20px;
+  font-weight: 600;
 }
 #buttonC:hover{
   transform: scale(1.05);
   background-color: #00FFFF;
   box-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.6), 0 0 30px rgba(0, 255, 255, 0.4);
+  color:black;
 }
