--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -7,9 +7,7 @@ body {
   background-position: center left;
   background-attachment: fixed;
   margin: 0;
-  /* display: table; */
-  /* width: 100vw;
-  height: 100vh; */
+  overflow: hidden;
 }
 #logo {
   position: absolute;
