--- a/css/feedback-style.css
+++ b/css/feedback-style.css
@@ -136,9 +136,9 @@ h1 {
 
 .p2-v{
     display: inline-block;
-    margin: 0 auto 3.5rem;    
-    background-color: rgba(255, 255, 255, 0.262);
-    padding: 0.3rem 0.4rem;
+    margin: 1rem auto 3.5rem;
+    background-color: #ffffff29;
+    padding: 0.4rem 0.8rem;
     border-radius: 2px;
     font-size: medium;
 }
