--- a/css/benchmark.css
+++ b/css/benchmark.css
@@ -134,6 +134,16 @@ span {
   color: white;
 }
 
+.rosso {
+  background-color: red;
+  color: white;
+}
+
 .no-hover {
   pointer-events: none;
+}
+
+button.verde.no-hover:hover,
+button.rosso.no-hover:hover {
+  background: inherit;
 }
